2nd attempt at fixing text on ios

--- a/charades.css
+++ b/charades.css
@@ -84,8 +84,7 @@ button:hover {
   text-align: center;
   justify-content: center;
   width: 200px;
-  aspect-ratio: 3/1;
-  height: auto;
+  height: 66px;
 }
 
 @media (max-width: 450px) {
